# DaListener

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  build-full-windows.ps1  build-msi.ps1  build-release-macos.sh  build-release.ps1  pyproject.toml  run.bat  setup.bat
dalistener/: __init__.py  app.py  audio.py  capability.py  models.py  session.py  storage.py  transcription.py
dalistener/dashboard/: __init__.py  auth.py  contracts.py  events.py  intelligence.py  local_models.py  local_provider.py  meetings.py  openai_realtime.py  pairing.py  platform.py  preferences.py  pricing.py  provider_mode.py  server.py  settings.py  sources.py  uploads.py  usage.py
docs/: BENCHMARKS.md
docs/benchmarks/: 2026-07-14-rtx3090-vs-ryzen5700x.json
docs/releases/: v0.2.0-alpha.1.md  v0.2.0-alpha.2.md  v0.2.0-alpha.3.md  v0.2.0-alpha.4.md
extension/: README.md  confirm.css  confirm.html  confirm.js  manifest.json  offscreen.js  options.html  options.js  pcm-worklet.js  service-worker.js
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  capture.ts  styles.css  types.ts
packaging/: dalistener-macos.spec  dalistener.spec  launcher.py
packaging/windows/: Package.wxs
scripts/: prepare-offline-models.py  start-windows.ps1
tests/: test_audio.py  test_billing_fallback.py  test_capability.py  test_dashboard.py  test_realtime_tuning.py  test_session.py  test_storage.py  test_transcription.py
tools/: benchmark_asr.py
