[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dalistener"
version = "0.2.0a3"
description = "Local, Windows-first live transcription for microphone and system audio"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "psutil>=6.0",
  "SoundCard>=0.4.3",
  "moonshine-voice>=0.0.68",
  "PySide6>=6.8",
  "msvc-runtime>=14.44; platform_system == 'Windows'",
]

[project.optional-dependencies]
best = [
  "faster-whisper>=1.1",
  "nvidia-cublas-cu12>=12.9; platform_system == 'Windows'",
  "nvidia-cudnn-cu12>=9.0; platform_system == 'Windows'",
]
test = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
dalistener = "dalistener.app:main"

[tool.setuptools.packages.find]
include = ["dalistener*"]

[tool.setuptools.package-data]
dalistener = ["assets/*.ttf", "assets/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
