[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dalistener"
version = "0.3.0a2"
description = "OpenAI-powered multi-meeting transcription dashboard for Chromium tabs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
  "websockets>=15.0",
  "openai>=2.0",
  "keyring>=25.6",
  "numpy>=1.26",
  "platformdirs>=4.3",
  "psutil>=6.0",
  "av>=14.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
local-fallback = [
  "moonshine-voice>=0.0.68",
  "faster-whisper>=1.1",
  "msvc-runtime>=14.44; platform_system == 'Windows'",
]
legacy-local = [
  "SoundCard>=0.4.3",
  "moonshine-voice>=0.0.68",
  "faster-whisper>=1.1",
  "PySide6>=6.8",
  "msvc-runtime>=14.44; platform_system == 'Windows'",
]
best = [
  "nvidia-cublas-cu12>=12.9; platform_system == 'Windows'",
  "nvidia-cudnn-cu12>=9.0; platform_system == 'Windows'",
]
test = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
dalistener = "dalistener.dashboard.server:main"
dalistener-dashboard = "dalistener.dashboard.server:main"
dalistener-legacy = "dalistener.app:main"

[tool.setuptools.packages.find]
include = ["dalistener*"]

[tool.setuptools.package-data]
dalistener = ["assets/*.ttf", "assets/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
